--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
         <!-- 1) В этом разделе создай 3 дочерних элемента: -->
 
         <!-- a) Заголовок первого уровня со своим ФИО -->
+         <h1>Воропаев Константин Сергеевич</h1>
         <!-- b) Несколько строк о себе: где учишься или работаешь, хобби, увлечения. Используй тег для абзаца. Длина строки должна быть больше 50-ти симвов (пробелы и др знаки припинания тоже считаются символом) -->
+         <p>Закончил БГПК, потом закончил БНТУ. Хобби нет, только учеба.</p>
         <!-- c) Фото (или любую картинку из интернета). Не забудь добавить описание на случай, если изображение не загрузится -->
+         <img src="./image/photo_2025-06-21_13-07-45.jpg" alt=""> 
     </section>
 
     <section data-cy="hw1-section-about-pre">
