--- a/index.html
+++ b/index.html
@@ -20,45 +20,116 @@
         <!-- a) Заголовок первого уровня со своим ФИО -->
          <h1>Воропаев Константин Сергеевич</h1>
         <!-- b) Несколько строк о себе: где учишься или работаешь, хобби, увлечения. Используй тег для абзаца. Длина строки должна быть больше 50-ти симвов (пробелы и др знаки припинания тоже считаются символом) -->
-         <p>Закончил БГПК, потом закончил БНТУ. Хобби нет, только учеба.</p>
+         <p>На фото ниже представлен попугай, который изучает код в it-incubator</p>
         <!-- c) Фото (или любую картинку из интернета). Не забудь добавить описание на случай, если изображение не загрузится -->
-         <img src="./image/photo_2025-06-21_13-07-45.jpg" alt=""> 
+         <img src="./image/photo_2025-06-21_13-07-45.jpg" alt="photo_my_parrot"> 
     </section>
 
     <section data-cy="hw1-section-about-pre">
         <!-- 2) В этом разделе создай выпадающий список с разными городами (не меньше 3-х). Свой город сделай вторым в этом списке. С помощью специального атрибута, сделай так, чтобы твой город всегда был выбранным по умолчанию  -->
         <div data-cy="hw1-unordered-list-box-pre">
             <!-- 3) В этом разделе создай 2 дочерних элемента: -->
+             <select>
+                <option >Минск</option>
+                <option selected>Борисов</option>
+                <option >Жодино</option>
+                <option >Крупки</option>
+             </select>
 
             <!-- a) Заголовок 2-го уровня (любимые книги/фильмы/блюда/страны... и т.п.) -->
+             <h2>Любимые книги</h2>
             <!-- b) Маркированный список. В списке должно быть не менее 3-х элементов -->
+             <ul>
+                <li>1984</li>
+                <li>Тряпияная кукла</li>
+                <li>Охотник</li>
+                <li>Жизнь на продажу</li>
+             </ul>
         </div>
+
         <div data-cy="hw1-ordered-list-box-pre">
             <!-- 3) В этом разделе создай 2 дочерних элемента: -->
 
             <!-- a) Заголовок 2-го уровня с другим названием (любимые книги/фильмы/блюда/страны... и т.п.) -->
+             <h2>Любимые блюда</h2>
             <!-- b) Нумерованный (упорядоченный) список. В списке должно быть не менее 3-х элементов -->
+             <ol>
+                <li>Пицца</li>
+                <li>Суши</li>
+                <li>Картошка</li>
+                <li>Паста (по Итальянски)</li>
+             </ol>
         </div>
+
         <div data-cy="hw1-skills-box-pre">
             <h2>Мои скиллы</h2>
             <!-- 4) Здесь создай несколько чекбоксов с подписью (не меньше 3-х). 
                 - В подписи укажи названия любых тем по верстке (все, что знаешь или слышал). 
                 - Каждый чекбокс должен быть связан со своей подписью. Для этого чекбокс должен находиться в элементе для подписи
                 - Отметь "галочкой" (с помощью специального атрибута) темы, которые ты уже знаешь. -->
+                <label for="front">
+                    <input id="front" type="checkbox" checked>
+                    Frontend
+                </label>
+                 <label for="css">
+                    <input id="css" type="checkbox" checked>
+                    css
+                </label>
+                <label for="js">
+                    <input id="js" type="checkbox">
+                    JavaScript
+                </label>
+                <label for="react">
+                    <input id="react" type="checkbox">
+                    React
+                </label>
         </div>
+
         <!-- 5) Создай здесь однострочное поле для ввода текста с подсказкой "Новый скилл", которая исчезает, когда начинаешь что-то печатать (для подсказки есть специальный атрибут) -->
+         <input type="text" placeholder="Новый скилл">
         <!-- 6) Создай здесь кнопку “Добавить” -->
+         <button>Добавить</button>
         <!-- 7) Добавь горизонтальную линию (для этого есть специальный тег) -->
+         <hr>
         
-        <table data-cy="hw-about-table-pre">
+        <table data-cy="hw-about-table-pre" border="1" >
             <!-- 8) В таблице сделай 5 строк и 3 столбца. 
                         - В первой строке ячейки заголовков, в остальных обычные ячейки
                         - Добавь границы для всей таблицы с помощью специального атрибута border="". Он устарел, но работает
                         - В последнем ряду первая ячейка должна занимать 2 столбца (как должно выглядеть - смотри образец). Таблицу можно заполнять любыми данными -->
+            <thead>
+                <tr>
+                    <th>п/п</th>
+                    <th>Наименование</th>
+                    <th>кг</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Яблоки</td>
+                    <td>5</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Груши</td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>Вишня</td>
+                    <td>2</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <td colspan="2">Итого</td>
+                <td>10</td>
+            </tfoot>
         </table>
     </section>
     <footer data-cy="hw-footer-pre">
         <!-- 9) Создай здесь ссылку на наш сайт https://it-incubator.io/ (текст ссылки должен быть it-incubator) -->
+         <a href="https://it-incubator.io/">it-incubator</a>
     </footer>
 </body>
 </html>
