--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </label>
                  <label for="css">
                     <input id="css" type="checkbox" checked>
-                    css
+                    CSS
                 </label>
                 <label for="js">
                     <input id="js" type="checkbox">
@@ -128,7 +128,7 @@
         </table>
     </section>
     <footer data-cy="hw-footer-pre">
-        <!-- 9) Создай здесь ссылку на наш сайт https://it-incubator.io/ (текст ссылки должен быть it-incubator) -->
+        <!-- 9) Создай здесь ссылку на наш сайт https://it-incubator.io/ (текст ссылки должен быть it-incubator)  --> 
          <a href="https://it-incubator.io/">it-incubator</a>
     </footer>
 </body>
